--- a/200.html
+++ b/200.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-    	<title>Seri Mulia Sarjana International School</title>
+    	<title>Test School</title>
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-		<link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
+		<!-- <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon"> -->
 		<!-- <link rel="icon" href="./assets/img/favicon.ico" type="image/x-icon"> -->
 		<link rel="stylesheet" href="./assets/css/main.css">
     </head>
