--- a/200.html
+++ b/200.html
@@ -3,8 +3,8 @@
     <head>
     	<title>Test School</title>
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-		<!-- <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon"> -->
-		<!-- <link rel="icon" href="./assets/img/favicon.ico" type="image/x-icon"> -->
+		<link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="./assets/img/favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" href="./assets/css/main.css">
     </head>
     <body id="#top">
