--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <head>
     	<title>Seri Mulia Sarjana International School</title>
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-		<link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
-		<link rel="icon" href="./assets/img/favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href="./assets/js/vendor/swiper.min.css">
-		<link rel="stylesheet" href="./assets/css/main.css">
+		<link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon">
+        <link rel="stylesheet" href="/assets/js/vendor/swiper.min.css">
+		<link rel="stylesheet" href="/assets/css/main.css">
     </head>
     <body id="#top">
         <div id="root"></div>
-        <script src="./assets/js/vendor/swiper.min.js"></script>
-        <script src="./assets/js/Index-dist.js"></script>
+        <script src="/assets/js/vendor/swiper.min.js"></script>
+        <script src="/assets/js/Index-dist.js"></script>
     </body>
 </html>
