--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-    	<title>Seri Mulia Sarjana International School</title>
+        <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=2.0,user-scalable=yes">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 		<link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="/assets/js/vendor/swiper.min.css">
 		<link rel="stylesheet" href="/assets/css/main.css">
+    	<title>Seri Mulia Sarjana International School</title>
+        <meta name="description" content="School Website">
+        <meta name="keywords" content="School Demo Site">
     </head>
     <body id="#top">
         <div id="root"></div>
