--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="/assets/js/vendor/swiper.min.css">
 		<link rel="stylesheet" href="/assets/css/main.css">
-    	<title>Seri Mulia Sarjana International School</title>
+    	<title>Place Schooler</title>
         <meta name="description" content="School Website">
         <meta name="keywords" content="School Demo Site">
     </head>
