--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     	<title>Place Schooler</title>
         <meta name="description" content="School Website">
         <meta name="keywords" content="School Demo Site">
+        <meta name="author" content="Mark Angeo Calderon">
+
     </head>
     <body id="#top">
         <div id="root"></div>
